# autoModelCar

./: Commands.txt  README.md
joy2car/: CMakeLists.txt  package.xml
joy2car/config/: params.yaml
joy2car/launch/: manual_autoModelCar.launch
joy2car/params/: joyParams.yaml
joy2car/src/: joy2car.py
lane_detection/: package.xml
lane_detection/src/: laneDetectionMod.py  lane_detection.py  lane_detection_autosuficent.py
move_car/: CMakeLists.txt  package.xml
move_car/src/: moveCar.py
obst_detection/: CMakeLists.txt  package.xml
obst_detection/launch/: obstacle_detector.launch
obst_detection/params/: obstParams.yaml
obst_detection/src/: obstDetection.py
overtake/: CMakeLists.txt  package.xml
overtake/launch/: overtake.launch
overtake/params/: overParams.yaml
overtake/src/: overtake.py
park_lane_detection/: CMakeLists.txt  package.xml
park_lane_detection/src/: park_lane_detection.py
parking/: CMakeLists.txt  package.xml
parking/include/parking/: parking.h
parking/src/: parking.cpp
pasar_caja/: CMakeLists.txt  package.xml
pasar_caja/include/pasar_caja/: pasar_caja.h
pasar_caja/src/: pasar_caja.cpp
pasar_caja_time/: CMakeLists.txt  package.xml
pasar_caja_time/include/pasar_caja_time/: pasar_caja_time.h
pasar_caja_time/src/: pasar_caja_time.cpp
