<?xml version="1.0"?>
<package format="2">
  <name>pasar_caja_time</name>
  <version>0.0.0</version>
  <description>Second Talent Land 2019 package</description>
  <maintainer email="victor.ay.alf@gmail.com">victor</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>
</package>
